src/assets/css/style.css
/* ... */
.project-card__link {
  display: inline-flex;
  align-items: center;
  font-weight: 600;
  color: var(--black-soft);
}

.project-card__link-icon {
  width: 20px;
  height: 20px;
}

.project-card__link:hover {
  text-decoration: underline;
}

/* Project Page Styles */

.project-list {
  display: flex;
  flex-direction: column;
  gap: 2rem;
  max-width: 42rem;
  margin: 0 auto 4rem auto;
}

.project__image-wrapper {
  margin-bottom: 1.5rem;
}

.project__image-wrapper img {
  width: 100%;
  height: auto;
  margin-bottom: 2rem;
  border-radius: 0.25rem;
}

/* Prose Styles */

.prose {
  font-size: 1.125rem;
  color: var(--default-text);
}

.prose h3 {
  font-size: 1.5rem;
  margin-bottom: 0.5rem;
  color: var(--default-text);
}

.prose ul {
  margin-bottom: 1rem;
}

.prose ul > li {
  position: relative;
  padding-left: 1.75em;
}

.prose ul > li::before {
  content: "";
  position: absolute;
  width: 0.375em;
  height: 0.375em;
  top: 0.6875em;
  left: 0.25em;
  border-radius: 50%;
  background-color: var(--default-text);
}

.prose p {
  margin-bottom: 1.25rem;
}

/* About Styles */

.bio {
  margin: 0 auto 4rem auto;
  max-width: 65ch;
}

/* Contact Styles */

.contact__sub-heading {
  padding: 0 1rem;
  color: var(--default-text);
}

.form {
  max-width: 36rem;
  margin: 4rem auto;
  border-radius: 0.25rem;
}

.form__section {
  display: flex;
  flex-direction: column;
  margin-bottom: 1.5rem;
}

.form__label {
  display: block;
  margin-bottom: 0.25rem;
  font-weight: 500;
}

.form__input {
  display: block;
  border: 1px solid var(--neutral-slate);
  border-radius: 0.25rem;
  padding: 0.5rem;
  color: var(--default-text);
}

.form__button {
  display: block;
  width: 100%;
  padding: 0.5rem 2rem;
  border: none;
  border-radius: 0.25rem;
  cursor: pointer;
  color: #fff;
  background-color: var(--default-text);
  transition: background-color 0.3s ease;
}

.form__button:hover {
  background-color: var(--amber-600);
}

@media (min-width: 640px) {
  .header__title {
    margin-bottom: 0;
  }

  .profile {
    flex-direction: row;
  }

  .profile__image-wrapper img {
    margin: 4rem;
  }
}

@media (max-width: 768px) {
  .header {
    flex-direction: row; /* Ensure items are horizontally aligned */
    justify-content: space-between; /* Space between the title and links */
    align-items: center; /* Align items vertically */
    margin-bottom: 1.5rem;
    position: sticky;
  }

  .header__title {
    margin-bottom: 0; /* Remove bottom margin */
  }

  .header__links {
    position: absolute;
    right: 0vw; /* Align to the right side, under hamburger */
    top: 4rem; /* Adjust based on your header's height */
    flex-direction: column;
    align-items: flex-end;
    display: none; /* Hide links initially */
    margin-right: 0rem;
  }

  .header__links.active {
    display: flex;
  }

  .hero {
    height: 90vh;
    margin-left: auto;
  }

  .hero__card {
    display: flex;
    flex-direction: column;
    padding: 0rem 0;
    flex: 1;
  }

  .hero__text--lead {
    font-weight: 750;
    font-size: 2rem;
    color: var(--default-text);
  }

  .services {
    height: 90vh;
    margin-bottom: auto;
  }

  .service-card-container {
    outline: pink 20px;
    flex-flow: column;
  }
  .service-card {
    box-shadow: var(--box-shadow);
    border-radius: 0.375rem;
    overflow: hidden;
    width: auto;
    display: inherit;
    vertical-align: inherit;
  }

  .services__heading {
    margin-top: 2rem;
  }

  .technologies {
    margin-top: 24rem;
  }

  .hamburger {
    display: flex;
    justify-content: flex-end;
  }

  .nav-menu {
    display: none;
    flex-direction: column;
    width: 100%;
    padding-top: 20px;
    list-style-type: none; /* Ensures no bullets are used */
  }

  .nav-menu li {
    list-style-type: none; /* Ensures no bullets on li elements */
  }

  .nav-menu li::marker,
  .nav-menu li::before {
    content: none; /* Removes any pseudo-element content */
  }
  .nav-menu.active {
    display: flex;
  }

  .navbar {
    /* Stack items vertically */
    justify-content: space-between; /* Align items to the right */
  }

  .header__link,
  .nav-link {
    display: block;
    text-align: center;
  }
}

ul {
  list-style-type: none; /* removes default bullet points */
  padding: 0;
  margin: 0;
}

li::marker {
  content: ""; /* removes the marker */
}

li {
  position: relative;
}

li::before {
  content: "• "; /* custom bullet */
  position: absolute;
}

@media (pointer: fine) {
  html,
  body {
    cursor: none;
  }

  *,
  *::before,
  *::after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    cursor: none;
  }

  .cursor {
    display: block;
    pointer-events: none; /* Allows click events to pass through the cursor */
    position: fixed; /* Keeps the cursor positioned relative to the viewport */
    top: 0;
    left: 0;
    z-index: 10000; /* Ensures it is above all other content */
    mix-blend-mode: difference; /* This will invert colors beneath the cursor */
  }

  .cursor__ball {
    position: absolute;
  }

  .cursor__ball--big circle {
    fill: white; /* White color for high contrast in difference mode */
    transition: transform 0.2s, opacity 0.2s;
  }
  a,
  .hoverable,
  button {
    cursor: none; /* Ensure the default cursor is not shown */
  }
}

